[tool.poetry]
name = "flask-auth-jwt"
version = "0.1.0"
description = ""
authors = ["Marcus Pereira <mpereirassa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"
flask-jwt-extended = "^3.24.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
